[package]
name = "stream-merge"
version = "0.1.0"
authors = ["Bobby McShane <mcshane.bobby@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["pcap", "s3", "async", "zstd", "gzip"]
description = "Merge together and efficiently time-sequence compressed .pcap files stored in AWS S3 object storage (or locally) to stdout for pipelined processing. High performance and parallel implementation for > 10 Gbps playback throughput with large numbers of files (~4k)."
readme = "README.md"
repository = "https://github.com/robber-m/stream-merge.git"


[dependencies]
# TODO: feature gate behind gzip, zstd, etc..
async-compression = { version = "0.3.5", features = ["gzip", "zstd", "stream", "futures-io"] }
bytes = "0.5.6"
smol = "1.0.0"
num_cpus = "1.13.0"
futures = "0.3.5"
# TODO: feature gate behind s3?
rusoto_s3 = "0.45.0"
rusoto_core = "0.45.0"
async-compat = "0.1.3"
async-channel = "1.4.2"
jemallocator = "0.3.2"
pcap-parser = "0.9.3"
nom = "5.1.2"
pin-project = "0.4.23"
pin-project-lite = "0.2"
futures-util = "0.3.17"
hex-literal = "0.3.1"
# TODO: feature gate behind coz
coz = "0.1.3"
structopt = "0.3.20"
anyhow = "1.0.33"

# TODO: feature gate behind tracing?
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }

[dev-dependencies]
futures-test = "0.3.17"
assert_cmd = "2"
predicates = "2"
tempfile = "3"
fake = "<=2.4.1"
rand = "0.8"

criterion = "0.3"
itertools = "0.9.0"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
debug = true
